# pw-zadanie2

./: .gitignore  LICENSE  README.md  prepare_solution.sh  speed_test.sh  speed_test_basic.sh  temp.out  tempnew.out  tempnew1.out  tempnewll.out
ab123456/: CMakeLists.txt  adorate-42.cpp
data/: fb_w.txt  test1.txt
data-res/: fb_w.out  kron_g500-logn21.out  road_PA.out  skitter.out  soc.out
data-res/outy/: web_b.out  web_w.out  wiki_b.out  wiki_w.out
ms386007/: CMakeLists.txt  adorate.cpp  blimit.cpp  raport.tex
ms386007-new/: CMakeLists.txt  adorate.cpp  graph.hpp  raport.tex
src/: barrier.hpp  blimit.cpp
times/: basic.txt  facebook.txt
verify/: verify.py
